<resources>
    <string name="app_name">时间牧场</string>
    <string name="todo_sheep">TODO</string>
    <string name="todo_gold">TODO</string>
    <string name="shop_string">Shop</string>
    <string name="shop_todo">TODO</string>
    <string name="buy">购买</string>
    <string name="upgrade">升级</string>
    <string name="todo">TODO</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_date">Date</string>
    <string name="title_activity_plan">Plan</string>
    <string name="title_activity_progress">Progress</string>
    <string name="title_activity_todo">Todo</string>
    <string name="title_activity_menu">Menu</string>

</resources>
