<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/shopbackground"
    tools:context=".Shop">

    <AbsoluteLayout
        android:layout_width="257dp"
        android:layout_height="533dp"
        android:layout_gravity="left"
        android:orientation="vertical"
        tools:ignore="RtlHardcoded">

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_x="17dp"
            android:layout_y="18dp"
            android:background="@mipmap/back"
            android:scaleType="fitCenter"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="26dp" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_x="153dp"
            android:layout_y="364dp"
            android:src="@mipmap/gold"
            tools:layout_editor_absoluteX="123dp"
            tools:layout_editor_absoluteY="102dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_x="201dp"
            android:layout_y="367dp"
            android:gravity="center_vertical|left"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="173dp"
            tools:layout_editor_absoluteY="132dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="77dp"
            android:layout_height="45dp"
            android:layout_x="152dp"
            android:layout_y="419dp"
            android:background="@mipmap/button"
            android:text="@string/buy"
            tools:layout_editor_absoluteX="163dp"
            tools:layout_editor_absoluteY="404dp" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="123dp"
            android:layout_height="176dp"
            android:layout_x="134dp"
            android:layout_y="159dp"
            android:contentDescription="@string/todo"
            android:src="@mipmap/sheep3"
            tools:layout_editor_absoluteX="172dp"
            tools:layout_editor_absoluteY="214dp" />

    </AbsoluteLayout>

    <LinearLayout
        android:layout_width="130dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:orientation="vertical"
        tools:ignore="RtlHardcoded">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo_gold"
                android:src="@mipmap/gold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:gravity="center_vertical|left" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo_sheep"
                android:src="@mipmap/sheephead" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:gravity="center_vertical|left" />
        </LinearLayout>

        <AbsoluteLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        </AbsoluteLayout>

    </LinearLayout>
</LinearLayout>