<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/farm"
    android:orientation="horizontal"
    tools:context=".Farm">

    <AbsoluteLayout
        android:layout_width="247dp"
        android:layout_height="533dp"
        android:layout_gravity="left"
        android:orientation="vertical"
        tools:ignore="RtlHardcoded">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="97dp"
            android:layout_height="99dp"
            android:layout_x="143dp"
            android:layout_y="140dp"
            android:src="@mipmap/sheep1"
            tools:layout_editor_absoluteX="144dp"
            tools:layout_editor_absoluteY="212dp" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="90dp"
            android:layout_height="89dp"
            android:layout_x="13dp"
            android:layout_y="72dp"
            android:src="@mipmap/sheep1"
            tools:layout_editor_absoluteX="146dp"
            tools:layout_editor_absoluteY="111dp" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="85dp"
            android:layout_height="79dp"
            android:layout_x="128dp"
            android:layout_y="61dp"
            android:src="@mipmap/sheep1"
            tools:layout_editor_absoluteX="192dp"
            tools:layout_editor_absoluteY="108dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="97dp"
            android:layout_height="108dp"
            android:layout_x="18dp"
            android:layout_y="174dp"
            android:src="@mipmap/sheep1"
            tools:layout_editor_absoluteX="162dp"
            tools:layout_editor_absoluteY="225dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="104dp"
            android:layout_height="105dp"
            android:layout_x="130dp"
            android:layout_y="242dp"
            android:src="@mipmap/sheep1"
            tools:layout_editor_absoluteX="185dp"
            tools:layout_editor_absoluteY="284dp" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="72dp"
            android:layout_height="78dp"
            android:layout_x="19dp"
            android:layout_y="432dp"
            android:background="@mipmap/shop"
            android:contentDescription="@string/shop_todo"
            android:scaleType="fitCenter"
            tools:layout_editor_absoluteX="132dp"
            tools:layout_editor_absoluteY="447dp" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="79dp"
            android:layout_height="78dp"
            android:layout_x="107dp"
            android:layout_y="431dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitCenter"
            android:src="@mipmap/friends"
            tools:layout_editor_absoluteX="122dp"
            tools:layout_editor_absoluteY="449dp" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="93dp"
            android:layout_height="87dp"
            android:layout_x="0dp"
            android:layout_y="0dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/returnfriend"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="12dp" />

    </AbsoluteLayout>

    <LinearLayout
        android:layout_width="130dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:orientation="vertical"
        tools:ignore="RtlHardcoded">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo_gold"
                android:src="@mipmap/gold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:gravity="center_vertical|left" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:src="@mipmap/sheephead" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:gravity="center_vertical|left" />
        </LinearLayout>

        <AbsoluteLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="95dp"
                android:layout_height="94dp"
                android:layout_x="13dp"
                android:layout_y="55dp"
                android:src="@mipmap/sheep1"
                tools:layout_editor_absoluteX="41dp"
                tools:layout_editor_absoluteY="130dp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="101dp"
                android:layout_height="99dp"
                android:layout_x="0dp"
                android:layout_y="150dp"
                android:src="@mipmap/sheep1"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="242dp" />
        </AbsoluteLayout>

    </LinearLayout>

</LinearLayout>